# neo_class

./: .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: flake8.yml
alembic/: env.py
alembic/versions/: init.py
data/.minio.sys/: format.json
docs/: s3.md
project/backend/: Dockerfile  alembic.ini  requirements.txt
project/backend/app/: .env  config.py  database.py  exceptions.py  main.py
project/backend/app/associative_tables/: user_class.py
project/backend/app/auth/: config.py  dependencies.py  exceptions.py  jwt.py  models.py  router.py  schemas.py  security.py  service.py  utils.py  validators.py
project/backend/app/classes/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
project/backend/app/comments/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
project/backend/app/migrations/: env.py
project/backend/app/tasks/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
project/backend/app/uploads/: aaa.docx
project/backend/app/users/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
project/backend/app/utils/: repository.py  s3.py  zip_files.py
project/backend/deploy/: app.sh
project/frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
project/frontend/public/: index.html
project/frontend/src/: App.js  App.jsx  index.js
project/frontend/src/components/: AllPrivateCourses.jsx  AnotherCreateTask.jsx  CreateCourse.jsx  (+12 more)
(+33 files in other folders)
